# PrivateAdvancedRoboticsStuff

./: README.md
arm_controllers/: CMakeLists.txt  controller_plugins.xml
arm_controllers/src/: ARM_trajectory_reciever.cpp  Marea_GravityCompAndPDcontroller.cpp  Marea_TaskSpace_KinematicController.cpp  Marea_TrajectoryCommunication.cpp  Marea_VelocityController_JointSpace.cpp  computed_torque_controller.cpp
eigen_kdl_examples/src/: eigen.cpp  kdl.cpp
elfin/elfin_gazebo/config/: Marea_GravityCompAndPDcontroller.yaml  Marea_TaskSpace_KinematicController.yaml  Marea_TrajectoryCommunication.yaml  Marea_VelocityController_JointSpace.yaml
elfin_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
elfin_ws/logs/arm_controllers/: build.check.002.log.stderr  build.check.003.log.stderr  build.check.005.log.stderr  build.check.064.log.stderr  build.check.066.log.stderr  build.check.067.log.stderr  build.check.068.log.stderr  build.check.069.log.stderr  build.check.070.log.stderr  build.check.072.log.stderr  build.check.073.log.stderr  build.check.187.log.stderr  build.check.188.log.stderr  build.make.000.log.stderr  build.make.001.log.stderr  build.make.002.log.stderr  build.make.007.log.stderr  build.make.008.log.stderr  build.make.009.log.stderr  build.make.016.log.stderr  build.make.017.log.stderr  build.make.018.log.stderr  build.make.019.log.stderr  build.make.020.log.stderr  build.make.021.log.stderr  build.make.022.log.stderr  build.make.023.log.stderr  build.make.024.log.stderr  build.make.025.log.stderr  build.make.026.log.stderr  build.make.027.log.stderr  build.make.028.log.stderr  build.make.029.log.stderr  build.make.030.log.stderr  (+46 more)
lessfucked_ws/devel/: .catkin  .rosinstall  local_setup.sh
lessfucked_ws/install/: .rosinstall  local_setup.sh
trajectory_generators/: CMakeLists.txt  package.xml
trajectory_generators/msg/: joint_trajectory.msg
trajectory_generators/src/: trajectory_generator.cpp  trajectory_receiver.cpp
(+515 files in other folders)
